Update: fonts Updated

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,21 @@
+
+  
+@font-face {
+  font-family: 'Galano Grotesque';
+  src:  url('./assets//fonts/Galano-Grotesque/Galano\ Grotesque.otf') format('otf');
+  font-weight: normal;
+  font-style: normal;
+ 
+};
+@font-face {
+  font-family: 'Galano Grotesque';
+  src:  url('./assets//fonts/Galano-Grotesque/Galano\ Grotesque\ Medium.otf') format('otf');
+  font-weight: 500;
+  font-style: normal;
+};
+
 :root {
-  font-family: Galano Grotesque, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Galano Grotesque', sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -17,6 +33,7 @@
 
 
 body {
+  font-family: 'Galano Grotesque', sans-serif;
   margin: 0;
   display: flex;
   place-items: center;
